testing/framework/resources/Advanced/Failing/mondrian/query5383.e
HQ	HeadQuarters	\N	\N	\N	\N	\N	f	1 Alameda Way
